--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
     <title>aluraflix</title>
 </head>
 <body>
-    <h1>Com o combo+, você pode aproveitar 
-        a Aluraplus e o Alura idioms por 
-        um preço único.
-    </h1>
+      <section class="principal container">
+        <div class="conteiner_caixa">
+         <h1>Com o combo+, você pode aproveitar 
+             a Aluraplus e o Alura idioms por 
+             um preço único.
+         </h1>
+         <img src="img/Combo.png" alt="combo+">
+        </div>
+    </section>
 </body>
 </html>
