--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
              um preço único.
          </h1>
          <img src="img/Combo.png" alt="combo+">
+        <a href="www.alura.com.br" class="container__botao"> Assine por 12x de 120,00*</a>
+         <a href="www.alura.com.br" class="container__botao_secundario">Assinar somente o Alura+</a>
+         <p class="container__aviso">O preço pode variar caso a assinatura seja feita em outros palnos</p>
         </div>
     </section>
 </body>
