--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
          <p class="container__aviso">O preço pode variar caso a assinatura seja feita em outros palnos</p>
         </div>
     </section>
+     <section>
+        <img src="img/Plataformas.png" alt="Pataformas">
+        <div>
+            <h2 class="descricao__titulo">Assista do seu jeito</h2>
+            <p class="descicao__texto">Aproveite a tela grande da TV ou assista no 
+                tablet,laptop,celulr e outros aparelhos.Nossa seleção de cursos nõ para de crescer.
+            </p>
+        </div>
+    </section>
     
 </body>
 </html>
