--- a/index.html
+++ b/index.html
@@ -21,13 +21,27 @@
          <p class="container__aviso">O preço pode variar caso a assinatura seja feita em outros palnos</p>
         </div>
     </section>
-     <section>
+     
+    <section>
         <img src="img/Plataformas.png" alt="Pataformas">
         <div>
             <h2 class="descricao__titulo">Assista do seu jeito</h2>
             <p class="descicao__texto">Aproveite a tela grande da TV ou assista no 
                 tablet,laptop,celulr e outros aparelhos.Nossa seleção de cursos nõ para de crescer.
             </p>
+        </div>
+    </section>
+
+    <section class="container secundario">
+        <div class="continer__descricao">
+            <p class="descricao__texto">
+                Só o combo + oferece a Alura+ e Alura Idiomas juntos para você
+                ter acesso a cursos de diversas àreas da tecnologia e aprender 
+                inglês e espanhol, onde e como quiser.
+            </p>
+            <a href="www.alura.com.br" class="container__botao secundario__botao">
+                Assine o Combo+
+            </a>
         </div>
     </section>
     
