--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                 Assine o Combo+
             </a>
         </div>
+        <img src="img/Telas.png" alt="Tela do alura+ e alura língua" class="secundario__imagem">
     </section>
     
 </body>
